--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
   <h1>What Now?</h1>
+  <div class="authButtons">
+    <div class="auth signup"><h2>Sign up</h2></div>
+    <div class="auth login"><h2>Login</h2></div>
+  </div>
 
   <div class="circle">
 
