basically works. made of jank

--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,9 @@
 <body>
   <h1>What Now?</h1>
   <div class="authButtons">
-    <div class="auth signup"><h2>Sign up</h2></div>
-    <div class="auth login"><h2>Login</h2></div>
+    <div class="auth signup"><h2 class="authText">Sign up</h2></div>
+    <div class="auth login"><h2 class="authText">Login with Github</h2></div>
+    <div class="logout logoutButton"><h2 class="logout" id="logout">Logout</h2></div>
   </div>
 
   <div class="circle">
